src/fixtures/errors/syntax-error.lua
function syntax_error()
    ret true
end

return syntax_error